refactor: solve maintainability issues